fix drawer scrolling, add extra padding for earlier designs that don't use the new header text

--- a/src/components/Drawer/_drawer.scss
+++ b/src/components/Drawer/_drawer.scss
@@ -37,8 +37,20 @@
   }
 
   &__content-children {
+    height: 100%;
+    overflow: hidden;
     padding: 1rem; // no token for what design wants
     padding-top: $snowflake-menu-padding;
+    width: 100%;
+
+    &--extra-padding {
+      // previous Drawer designs wanted 32px padding, new one wants 16px, not sure which if any will win
+      padding: 2rem;
+    }
+
+    > * {
+      overflow-y: auto;
+    }
   }
 }
 
